# ADIOS2-Testing

frontier/warpx/: evaluation.sh  input.n16  input.n4  runconf_warpx_frontier.sh
frontier/warpx/job.frontier/: parameters-nullcore.txt
output_archive/: CMakeLists.txt  ReadAttribute.cpp  ReadCommon.cpp  WriteAttribute.cpp  WriteCommon.cpp  test_file_unique.c
performance/bp-ffs-perf/: adios2_iotest  campaign_results.csv  cheetah-campaign.py  staging-perf-test-16MB-8to1.txt  staging-perf-test-1MB-8to1.txt  staging-perf-test-512MB-8to1.txt  staging-perf-test-many-vars.txt
performance/sst-perf/: README.md  cheetah-campaign.py
performance/sst-readstyle/: README.md  campaign.py  local_sweep_groups.py  manyvars-2x1.txt  manyvars-8x1.txt  sst.xml  summit_sweep_groups.py  sweep_groups_helper.py  sweeps.py
performance/sst-readstyle/post-processing/: cleanup.sh
setup/frontier/warpx/: frontier_warpx_profile.sh  input.n1024  input.n128  input.n2  input.n2048  input.n256  input.n4096  input.n6144  input.n64  timing.sh  timing.txt  warpx_frontier_timing.txt
setup/frontier/warpx/job.frontier/: notes.txt  parameters-bp4.txt  parameters-bp5-async.txt  parameters-bp5.txt  parameters-chunk.txt  parameters-ew-ar1.txt  parameters-ew.txt  parameters-ews.txt  parameters-shm.txt
setup/frontier/xgc/: eval_restart_timer.sh  evaluation.sh  setup-xgc.sh  test.sh  xgc_frontier_evaluation_timer.txt
setup/frontier/xgc/XGC-input/: README.md  adios2cfg.xml  adios2cfg_in.xml  cleanup.sh  den_ITER_smoothed.prf  engine_bp4.xml  engine_ew-ar1.xml  engine_ew.xml  engine_null.xml  engine_shm.xml  generate_xml.sh  input.128.first  input.128.restart  input.16.first  input.16.restart  input.32.first  input.32.restart  input.4.first  input.64.first  input.64.restart  input.8.first  input.8.restart  input.restart  petsc.rc  tempe_ITER_smoothed.prf  tempi_ITER_smoothed.prf
